--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: #dcdcdc;
 }
+p{
+  font-size:10px ;
+}
 main {
   display: flex;
   flex-direction: column;
