--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
 }
-/* common style or utilities */
+
 body {
   font-family: "Poppins", sans-serif;
   background-color: #dcdcdc;
@@ -25,75 +25,22 @@ main {
   margin-top: 21px;
   border-radius: 5px;
 }
-hr {
-  border: 1px solid #d1d1d1;
-  margin-bottom: 27px;
-}
-.top-players {
-  margin-bottom: 30px;
-}
 .section-title {
   color: #562eff;
   font-size: 24px;
   margin-top: 3px;
 }
-/* Top players style */
-.players {
-  display: grid;
-  /* grid-template-columns: 1fr 1fr 1fr; */
-  grid-template-columns: repeat(3, 1fr);
-  grid-row-gap: 30px;
-}
-.player {
-  display: flex;
-  align-items: center;
-}
-.player img {
-  width: 56px;
-  height: 56px;
-}
-.player-name {
-  margin-left: 16px;
-  font-size: 18px;
-}
-/*---------------------------
- Top blog styles 
- -------------------------- */
-.blogs {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-row-gap: 26px;
-}
-.blog {
-  display: flex;
-}
-.blog .thumbnail img {
-  width: 177px;
-  height: 117px;
-}
-.blog-info {
-  margin-left: 16px;
-}
-.blog-title {
-  font-size: 20px;
-}
-.blog-author {
-  color: #9f9f9f;
-  font-size: 16px;
-}
-.blog-author a {
-  text-decoration: none;
-  font-size: 16px;
-  color: #562eff;
-}
 
-/* ------------------
-courses style 
-------------------- */
 .courses {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 24px;
+ /* bordeline */
+ margin-right:5%;
+ margin-left: 5%;
+ padding-left:5Px;
+ margin-bottom: 5px;
+ box-shadow: 30px 30px 30px 30px gray;
 }
 .course .course-banner img {
   width: 224px;
