--- a/style.css
+++ b/style.css
@@ -1,94 +1,100 @@
-/* fonts  */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
-* {
-  margin: 0;
-  padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+body{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
-
-body {
-  font-family: "Poppins", sans-serif;
-  background-color: #dcdcdc;
-}
-p{
-  font-size:10px ;
-}
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.container {
-  background-color: #ffffff;
-  width: 870px;
-  padding: 30px;
-  margin-top: 21px;
-  border-radius: 5px;
-}
-.section-title {
-  color: #562eff;
-  font-size: 24px;
-  margin-top: 3px;
-}
-
-.courses {
-  display: flex;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 24px;
- /* bordeline */
- margin-right:5%;
- margin-left: 5%;
- margin-bottom: 20px;
- padding-left:5Px;
- box-shadow: 5px 5px 20px gray;
-}
-.course .course-banner img {
-  width: 224px;
-  height: 104px;
-}
-.course-info {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.top-part{
+    background-color: blue;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
-.fa-star {
-  font-size: 12px;
+.top-left h1{
+    font-size: 64px;
+    color: #FFFFFF;
+    width: 485px;
+    height: 230px;
 }
-.fa-star.filled {
-  color: #ffc014;
+.video-link a{
+    text-decoration: none;
+    width: 190px;
+    height: 44px;
+    background-color: #E02C6D;
+    padding: 10px 10px 10px 12px;
+    margin-left: 3px;
 }
-.fa-star.emtey {
-  color: #aeaeae;
+ /* transistion effect on span element */
+.video-link:hover span{
+    color:black;
+    transition: color 2s ease-in-out;
+}
+.video-link span, .fa-arrow-right{
+    color:#FFFFFF;
+    font-size: 16px;
+    font-weight: 500;
+}
+.top-right{
+    overflow: hidden;
+
+}
+.top-right img{
+    height: 438px;
+    width: 650px;
+    
+  
+}
+ /* transistion effect on banner */
+.top-right:hover img{
+    transform: scale(1.5);
+    transition: transform 3s ease-in-out;
+    
+    
 }
 
-/*----------------
- Media queries
------------------ */
-/* Mobile divices  */
-@media only screen and (max-width: 688px) {
-  .container {
-    width: 100%;
-  }
-  .players,
-  .blogs,
-  .courses {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .player,
-  .blog {
+.players-info{
+    display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
-  }
+    align-content: center;
+    padding-right: 400px;
 }
-/* Tablet devices  */
-@media only screen and (min-width: 688px) and (max-width: 992px) {
-  .container {
-    width: 100%;
-  }
-  .players,
-  .blogs,
-  .courses {
-    grid-template-columns: repeat(2, 1fr);
-  }
+.players{
+    width:60%;
+    display: grid;
+    row-gap: 30px;
+    column-gap: 30px;
+    grid-template-columns: repeat(3,1fr);
+    margin-top: 70px;
+   
+
+   
 }
-/* footer */
+.player{
+    height: 500px;
+    width: 330px;
+    padding-left: 30px;
+    border: 1px solid transparent;
+    box-shadow: 0px 0px 40px 0px #00000026;
+   
+
+}
+.player img{
+    width: 300px;
+    height: 256px;
+    margin-top: 20px;
+}
+.player h3{
+    color:#18191F;
+    width:300px;
+    font-size: 28px;
+    
+}
+.player p{
+    width: 300px;
+    font-size: 16px;
+    line-height: 26px;
+    color:#6C6C6C;
+}
+ 
