--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
 }
 .top-part{
     background-color: blue;
+    width:100%;
     height: 500px;
     display: flex;
     align-items: center;
@@ -91,10 +92,10 @@ body{
     font-size: 16px;
     line-height: 26px;
     color:#6C6C6C;
-}
-    /* resposible for mobile screen */
-    @media only screen and (max-width: 600px){
-      .top-part{
+} 
+ /* resposible for mobile screen */
+ @media only screen and (max-width: 600px){
+.top-part{
           flex-direction: column;
           height: max-content;
       }
@@ -137,10 +138,10 @@ body{
 /* footer */
  footer{
   display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-margin-top: 120px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 120px;
 }
 footer p{
   margin-left: 110px;
