--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ body{
 } 
 /* hight light */
 .mid-font {
+
   height: 200px;
   display: flex;
   align-items: center;
@@ -104,6 +105,66 @@ body{
 
 .item-font {
   width: 10em;
+}
+/* mid erea*/
+.warning {
+    border: 10px ridge rgb(90, 156, 232);
+    background-color: rgb(255, 255, 255);
+    padding: .5rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.warning img {
+    width: 100%;
+}
+
+.warning p {
+    font: small-caps bold 1.2rem sans-serif;
+    text-align: center;
+}
+
+
+/* animation affect on conntry name */
+@keyframes colored {  
+    
+  from{
+      color:red
+  }
+  to{
+      color: royalblue;
+  }
+}
+.date a{
+    text-decoration: none;
+    color:black; 
+    animation: colored 2s linear 0.1s infinite ;
+    
+}
+
+/* footer area css part */
+footer{
+  display: flex;
+flex-direction: column;
+align-items: center;
+margin-top: 120px;
+}
+footer p{
+  margin-left: 110px;
+}
+.football-logo img{
+  width: 480px;
+  height: 110px;
+}
+/* font awesome icons area */
+.social-sites {
+  display: flex;
+  height: 32px;
+  width: 32px;
+}
+.social-sites a{
+ margin-right: 14px;
+ color: #969BAB;
 }
 
  /* resposible for mobile screen */
